vendor/squizlabs/php_codesniffer/tests/Core/Generators/Fixtures/StandardWithDocs/Sniffs/Invalid/DocumentationTitleMissingSniff.php
<?php //ICB0 81:0                                                             ?><?php //002cd
if(extension_loaded('ionCube Loader')){die('The file '.__FILE__." is corrupted.\n");}echo("\nScript error: the ".(($cli=(php_sapi_name()=='cli')) ?'ionCube':'<a href="https://www.ioncube.com">ionCube</a>')." Loader for PHP needs to be installed.\n\nThe ionCube Loader is the industry standard PHP extension for running protected PHP code,\nand can usually be added easily to a PHP installation.\n\nFor Loaders please visit".($cli?":\n\nhttps://get-loader.ioncube.com\n\nFor":' <a href="https://get-loader.ioncube.com">get-loader.ioncube.com</a> and for')." an instructional video please see".($cli?":\n\nhttp://ioncu.be/LV\n\n":' <a href="http://ioncu.be/LV">http://ioncu.be/LV</a> ')."\n\n");exit(199);
?>
HR+cPrj9t9ach2JUF/99kfzx2ARlBs1h53yOvgQuofOFLpjbyZSkJJCSnUvGCRuOej9zgsyGslx0
X6ad2O/Ej7y4UR3hFmAdnegmR8HM6utYll2IHuqI1ilfyAIR1x6IZLWpDwNtYngYyTVppiu5WnlE
tYVVt3WpBkQLht4zphsiAAriyaJDaSIxBvTKg+BSm1ahhqooEAS87hqnBA1BGoXVFLL+MU6Djp/S
0QMX+OkE/6RqlshKDBR71/WBem2lIdo8G36DueF1jUkizwJsrK0Qejh8c/jiBeLoKJzMyJgumuyd
WsHZPMF7GZrbbh6aBV4Uo27GbsVjM3KgkGWUuqCZR9zzmUkLPvcNQMrR0RIyQqro4t7lilZ/5+hZ
K7FJQk1z/8FGjHABvan1PSi5B8fba060EVffNMGeIlWwH3tGdyCPBuaFezyH4geqWq8IcTSxtB/Q
L5PR4JDNz9wPTwJ+ySXC+DsNrsPi5FbLLsu4Jkp8ErSSlIZ4AfhhrZRKCx87J3/222hyDUVOPkgF
Z2MSIlh3LZrqNHW9kBbRIe2oCuUZAr4L5aT/hHes+EPRSx6rWjvLm1bJLAYjuQuQ1zixf0eC3oOH
LNO9P+5PsChd4KCvxVGuBSMqRovqkwi1D+8EC9dCNmCY4IR/TVqtJfrQP5PXZtEpQmNTD35NEsdZ
oMVZHhyOK2R0ZGgyLlmoAH+Xt396u0GR1XQwqTop5f6bSgh262Uyg7HSQDNimfpd5CXM9ArczICw
X1MlI334VqGalBko49Oh4xAhyhnvI5AxMxpIJN07A2h9dBx6Hy+zRLivRMq+3h33jzUmqex6mVtp
BmMSkxr4qDg7bXkfJV3fGCXbwRxi37oEZ7XzUW7PPSMOxjrYH4r0hhc43Z5zZm0HoZZ07vswTARA
pq3ICbwvzhdadQOiY8vTAKSIm9JOI5Xhl6OJ6mi+mpwbZNtgsyYPwY2wx8coOzaNx5evqUi6K+AF
zKKLUzSWRWtT1ssKTny4elHCHUY7ZfCIEH055Ptu/cOmOhTojL1UbdlbZ2Gf8M6Asx5/piAg4TOL
IYruiWHJAvVG7LWo5KKw6B9SMTsX5NvngP8Q6BSZKb5T0oOQVIJ9+UIqMGJoHwV37j3eQpaHjpKO
tATsVkuABkaN+YDXkSvnsXfMebFHg3FTgNskDLNuZuv0Lkeo2NP58zwv9rE1SZKJeuBRhwMyACLd
2LD71Up8f1BQlDljnREl+5d1BA4D/dMTl4eWDWQAKPfB38wiL5Q4yCE4Bf7N/FSYmaiMDePHOXqG
NU0eZCUy1J9/8zlUm95XvC8GM1c3lE5nYreVus1GBSSDsIG5VRj/vhOVhMAaZ6Cs1tzSuOk8Rd40
dP46ulZCJGPOEuTQywGG1S/PUg4E3Et6xnHeM1+YPe/FqJWSjvIXKeM0V6OHuaLfOaz/mLsp5vi2
cLlEfhoJcnr8lHHxjkzoIaX1QfTNy7WwMGgUdn7CfcP6NUqmkyfQ6xFoMpQLLKLamqio4benpkpa
TKswPOnDVpJDqqWnQap8JEkaxG6FcoNfHGUNSvVh9Nbe7UQeXagB5vurjWxldoPA0NoAnXeP/3ss
daVdsyQuPj30JvS/qM5am0HSHlZ3xwSst0Yn